--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/deploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/deploymentSettings.json
@@ -203,7 +203,7 @@
           "Create Deployment Settings": {
             "$ref": "./examples/PutDeploymentSettings.json"
           },
-          "Create Deployment Settings With AD Less": {
+          "Create Deployment Settings Without Active Directory Integration": {
             "$ref": "./examples/PutDeploymentSettingsWithADLess.json"
           }
         },
@@ -418,7 +418,7 @@
         },
         "secretsLocation": {
           "type": "string",
-          "description": "Azure keyvault endpoint. This property is deprecated from 2023-12-01-preview. Please use secrets property instead."
+          "description": "Azure key vault endpoint. This property is deprecated from 2023-12-01-preview. Please use secrets property instead."
         },
         "secrets": {
           "type": "array",
