--- a/specification/portalservices/CopilotSettings.Management/tspconfig.yaml
+++ b/specification/portalservices/CopilotSettings.Management/tspconfig.yaml
@@ -47,6 +47,7 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-typespec/http-client-csharp-mgmt":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     package-name: "Azure.ResourceManager.PortalServicesCopilot"
     namespace: "{package-name}"
 linter:
