--- a/specification/keyvault/KeyVault.Management/tspconfig.yaml
+++ b/specification/keyvault/KeyVault.Management/tspconfig.yaml
@@ -40,8 +40,8 @@ options:
       name: "@azure/arm-keyvault"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/keyvault"
-    package-dir: "armkeyvault"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armkeyvault"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armkeyvault"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
