Enable Java premium

--- a/specification/servicebus/ServiceBus.Management/tspconfig.yaml
+++ b/specification/servicebus/ServiceBus.Management/tspconfig.yaml
@@ -18,9 +18,11 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-servicebus-generated"
-    namespace: "com.azure.resourcemanager.servicebus.generated"
+    package-dir: "azure-resourcemanager-servicebus"
+    namespace: "com.azure.resourcemanager.servicebus"
     service-name: "Service Bus" # human-readable service name, whitespace allowed
+    premium: true
+    enable-sync-stack: false
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-servicebus"
