service-dir fix for java
Removed TODO comment about package split from service-dir.

--- a/specification/servicebus/ServiceBus.Management/tspconfig.yaml
+++ b/specification/servicebus/ServiceBus.Management/tspconfig.yaml
@@ -23,6 +23,7 @@ options:
     service-name: "Service Bus" # human-readable service name, whitespace allowed
     premium: true
     enable-sync-stack: false
+    service-dir: "sdk/resourcemanager" # TODO remove after package split
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-servicebus"
