--- a/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
+++ b/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
@@ -11,6 +11,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/connectedClusters.json"
     examples-dir: "{project-root}/examples"
   "@azure-typespec/http-client-csharp-mgmt":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     package-name: "Azure.ResourceManager.Kubernetes"
     namespace: "{package-name}"
   "@azure-tools/typespec-python":
