--- a/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
+++ b/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
@@ -10,10 +10,12 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/connectedClusters.json"
     examples-dir: "{project-root}/examples"
-  "@azure-typespec/http-client-csharp-mgmt":
+  "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
-    package-name: "Azure.ResourceManager.Kubernetes"
-    namespace: "{package-name}"
+    flavor: azure
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "Azure.ResourceManager.Kubernetes"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-hybridkubernetes"
     namespace: "azure.mgmt.hybridkubernetes"
