reset package lock and try config changes

--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -23,6 +23,9 @@ options:
     package-details:
       name: "@azure-rest/ai-resources-autogen"
     flavor: azure
+  "@azure-tools/typespec-csharp":
+    namespace: "@azure-rest/ai-resources-autogen"
+    clear-output-folder": true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/data-plane"
