--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -25,6 +25,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-csharp":
     namespace: "@azure-rest/ai-resources-autogen"
+    flavor: azure
     clear-output-folder": true
 linter:
   extends:
