--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -24,7 +24,7 @@ options:
       name: "@azure-rest/ai-resources-autogen"
     flavor: azure
   "@azure-tools/typespec-csharp":
-    namespace: "@azure-rest/ai-resources-autogen"
+    namespace: "azure.ai.resources.autogen"
     flavor: azure
     clear-output-folder": true
 linter:
