Update rust specs to be compatible with tsp-client generation (#37373)
* update rust specs to be compatible with tsp-client generation

* Update specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml

* Update specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml

* Update specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml

* Update specification/storage/Microsoft.BlobStorage/tspconfig.yaml

---------

Co-authored-by: catalinaperalta <caperal@microsoft.com>

--- a/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
+++ b/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
@@ -35,7 +35,7 @@ options:
     namespace: com.azure.storage.blob
     flavor: azure
   "@azure-tools/typespec-rust":
-    package-dir: "azure_storage_blob"
+    emitter-output-dir: "{output-dir}/{service-dir}/{crate-name}"
     crate-name: "azure_storage_blob"
     crate-version: "0.1.0"
     flavor: azure
