--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -60,7 +60,7 @@ options:
     api-version: "7.6"
     crate-name: "azure_security_keyvault_certificates"
     crate-version: "0.0.1"
-    emitter-output-dir: "{project-root}/generated"
+    emitter-output-dir: "{output-dir}/{service-dir}/{crate-name}"
   "@azure-tools/typespec-client-generator-cli":
     additionalDirectories:
       - "specification/keyvault/Security.KeyVault.Common/"
