--- a/specification/devcenter/DevCenter.Management/tspconfig.yaml
+++ b/specification/devcenter/DevCenter.Management/tspconfig.yaml
@@ -8,7 +8,7 @@ options:
     omit-unreachable-types: true
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/devcenter.json"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/DevCenterRP.json"
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
